// file: pkg/db/proto/requests/get_migration_status_request.proto

edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";

import "common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

message GetMigrationStatusRequest {
  // Database name to check migration status for
  string database = 1;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
