// file: pkg/db/proto/responses/get_migration_status_response.proto
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * GetMigrationStatusResponse contains the current migration status for a database.
 * Shows current version, applied migrations, and pending migrations.
 */
message GetMigrationStatusResponse {
  // Current migration version of the database
  string current_version = 1;

  // List of migration versions that have been applied
  repeated string applied_versions = 2 [lazy = true];

  // List of migration versions that are pending application
  repeated string pending_versions = 3 [lazy = true];
}
